--- a/views/around.ejs
+++ b/views/around.ejs
@@ -61,6 +61,10 @@
                                     <p class="card-text">
                                         <%= a.name %>
                                     </p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p><%= mountain.name %></p>
+                                        <p><%= a.address %></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
