--- a/views/around.ejs
+++ b/views/around.ejs
@@ -62,7 +62,7 @@
                                         <%= a.name %>
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <p><%= a.mountainNum %></p>
+                                        <p><%= a.mountain.name %></p>
                                         <p><%= a.address %></p>
                                     </div>
                                 </div>
