--- a/views/around.ejs
+++ b/views/around.ejs
@@ -62,8 +62,8 @@
                                         <%= a.name %>
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <p style="width: 80px; padding-left: 10px; padding-right: 10px;"><%= a.mountain.name %></p>
-                                        <p><%= a.address %></p>
+                                        <p style="width: 80px; margin-left: 10px;"><%= a.mountain.name %></p>
+                                        <p style="margin-left: 10px;"><%= a.address %></p>
                                     </div>
                                 </div>
                             </div>
