--- a/views/around.ejs
+++ b/views/around.ejs
@@ -61,9 +61,9 @@
                                     <p class="card-text">
                                         <%= a.name %>
                                     </p>
-                                    <div class="d-flex justify-content-between align-items-center">
+                                    <div class="d-flex justify-content-between">
                                         <p style="width: 80px; margin-left: 10px;"><%= a.mountain.name %></p>
-                                        <p style="margin-left: 10px;"><%= a.address %></p>
+                                        <p style="margin-left: 10px; margin-right: 10px;"><%= a.address %></p>
                                     </div>
                                 </div>
                             </div>
