--- a/views/around.ejs
+++ b/views/around.ejs
@@ -63,7 +63,7 @@
                                     </p>
                                     <div class="d-flex justify-content-between">
                                         <p style="width: 80px; margin-left: 10px;"><%= a.mountain.name %></p>
-                                        <p style="margin-left: 10px; margin-right: 10px;"><%= a.address %></p>
+                                        <p style="text-align: right;;"><%= a.address %></p>
                                     </div>
                                 </div>
                             </div>
