--- a/views/around.ejs
+++ b/views/around.ejs
@@ -61,7 +61,7 @@
                                     <p class="card-text">
                                         <%= a.name %>
                                     </p>
-                                    <div class="d-flex justify-content-between">
+                                    <div class="d-flex justify-content-between" style="margin-bottom: 10px;">
                                         <p style="width: 80px; margin-left: 10px;"><%= a.mountain.name %></p>
                                         <p style="text-align: right;;"><%= a.address %></p>
                                     </div>
