--- a/views/around.ejs
+++ b/views/around.ejs
@@ -61,9 +61,9 @@
                                     <p class="card-text">
                                         <%= a.name %>
                                     </p>
-                                    <div class="d-flex justify-content-between" style="margin-bottom: 10px;">
-                                        <p style="width: 80px; margin-left: 10px;"><%= a.mountain.name %></p>
-                                        <p style="text-align: right;;"><%= a.address %></p>
+                                    <div class="d-flex justify-content-between">
+                                        <p style="width: 80px; margin-left: 10px; margin-bottom: 0;"><%= a.mountain.name %></p>
+                                        <p style="text-align: right; margin-bottom: 0;"><%= a.address %></p>
                                     </div>
                                 </div>
                             </div>
