--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -65,7 +65,7 @@
   <div class="container marketing">
 
     <!-- Three columns of text below the carousel -->
-    <div class="row">
+    <div class="row" style="margin-top: 30px;">
       <% arounds.forEach(a => { %>
       <div class="col-lg-4">
         <h2><%= a.name %></h2>
