--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <h2 class="center">Edit your post</h2>
+</br></br>
+  <h2 class="center">게시글 수정</h2></br>
   <div class="data-form">
     <form class="form-post" action="<%=`/posts/${post.id}/update`%>" method="post">
 
@@ -12,7 +12,7 @@
         <label for="detail">detail</label>
         <textarea id="detail" name="detail" class="form-control" placeholder="Detail"><%= post.detail %></textarea>
       </div>
-
+</br>
       <div>
         <button type="submit" class="btn btn-outline-success">Save</button>
       </div>
