--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <h2 class="center">Write your post</h2>
+</br></br>
+  <h2 class="center">게시글 작성</h2></br>
   <div class="data-form">
     <form class="form-post" action="/posts/create" method="post">
 
@@ -10,14 +10,14 @@
 
       <div class="form-group">
         <label for="detail">Detail</label>
-        <textarea id="detail" name="detail" class="form-control" placeholder="Detail"></textarea>
+        <textarea id="detail" name="detail" value="" class="form-control" placeholder="Detail" ></textarea>
       </div>
-
+</br>
       <div>
-        <a class="btn btn-outline-success" href="/posts/index">Back</a>
+        <a class="btn btn-outline-success" href="/posts">Back</a>
         <button type="submit" class="btn btn-outline-success">Create</button>
       </div>
 
     </form>
   </div>
-</div>
+
