--- a/views/index.ejs
+++ b/views/index.ejs
@@ -144,7 +144,7 @@
                 <div class="col-xs-7 col-sm-7 col-md-4 col-lg-4 p-3">
                     <div class="card p-3 shadow text-center border-0">
                         <div class="card-body">
-                            <a href="/community">
+                            <a href="/posts">
                                 <img src="/images/community.png" width=100px>
                                 <hr />
                                 <h2 class="card-title display-1" style="font-size:3.0vmin;">커뮤니티</h2>
