--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="/around">주변정보</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/community">커뮤니티</a>
+                            <a class="nav-link" href="/posts">커뮤니티</a>
                         </li>
                     </ul>
                     <ul class="nav">
