--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,11 +1,9 @@
-<div class="container-fluid">
-  <h2 class="center">Community</h2>
+
   <table class="table table-striped" id="tb">
     <thead>
       <tr>
         <th scope="col">Post Num</th>
         <th scope="col">Title</th>
-        <th scope="col">Detail</th>
         <th scope="col">Date</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
@@ -23,9 +21,6 @@
           </a>
         </td>
         <td>
-          <%= post.detail %>
-        </td>
-        <td>
           <%= post.createdAt %>
         </td>
         <td>
@@ -37,7 +32,7 @@
           <form action="<%=`posts/${post.id}/delete`%>" method="post">
             <input type="hidden" name="id" value="<%= post.id %>">
             <input type="submit" name="Delete" value="Delete" class="btn btn-outline-success"
-              onClick="alert('Are yout sure you want to delete this record?')">
+              onClick="alert('Are you sure you want to delete this record?')">
           </form>
         </td>
       </tr>
@@ -45,12 +40,12 @@
     </tbody>
 
   </table>
-
+</br>
   <div>
     <a class="btn btn-outline-success" href="/posts/new" type="submit">New</a>
 
   </div>
-
+</br></br>
   <!-- search -->
   <div class="container-fluid" id="search">
     <div class="d-grid gap-4">
@@ -61,4 +56,4 @@
       </form>
     </div>
   </div>
-</div>
+
