--- a/views/search.ejs
+++ b/views/search.ejs
@@ -5,7 +5,7 @@
   <!-- main -->
   <div class="container-fluid" id="search">
     <div class="d-grid gap-4">
-      <form class="d-flex" action="/search" method="post">
+      <form class="d-flex" action="/search/name" method="post">
         <input class="form-control me-2" type="text" placeholder="어디로 떠나실래요?" aria-label="search" name="searchWord">
         <button class="btn btn-outline-success" type="submit" onclick="">Search</button>
       </form>
