--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -11,5 +11,17 @@
   <div class="mt-3">
     <a class="btn btn-outline-success" href="/posts">Back</a>
   </div>
+ <div class="data-form">
+    <form class="form-post" action="/comments/<%=post.id%>" method="post">
 
+      <div class="form-group">
+        <label for="commentDetail">Comment</label>
+        <textarea id="commetDetail" name="commetDetail" class="form-control" placeholder="commetDetail"></textarea>
+      </div>
+
+      <div>
+        <button type="submit" class="btn btn-outline-success">Create</button>
+      </div>
+
+    </form>
 
