--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,43 +1,56 @@
-<div class="container-fluid">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
-    <h3 class="contentBoxTop mb-3">회원가입</h3>
+<link rel="stylesheet" href="/css/reg.css">
 
-    <form action="/users/create" method="post">
+<body>
 
-        <div class="form-group row">
-            <label for="id" class="col-sm-3 col-form-label">ID*</label>
-            <div class="col-sm-9">
-                <input type="text" id="id" name="id" value="" class="form-control">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="password" class="col-sm-3 col-form-label">Password*</label>
-            <div class="col-sm-9">
-                <input type="password" id="password" name="password" value="" class="form-control">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="name" class="col-sm-3 col-form-label">Name*</label>
-            <div class="col-sm-9">
-                <input type="text" id="name" name="name" value="" class="form-control">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="birth" class="col-sm-3 col-form-label">Birth*</label>
-            <div class="col-sm-9">
-                <input type="date" id="birth" name="birth" value="" class="form-control">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="nickname" class="col-sm-3 col-form-label">Nickname*</label>
-            <div class="col-sm-9 col-sm-offset-3">
-                <input type="text" id="nickname" name="nickname" value="" class="form-control">
-            </div>
-        </div>
+    <div class="main">
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-outline-success">Submit</button>
-        </div>
-    </form>
+        <!-- Sign up form -->
+        <section class="signup">
+            <div class="container">
+                <div class="signup-content">
+                    <div class="signup-form">
+                        <h2 class="form-title">Sign up</h2>
+                        <form action="/users/create method="POST" class="register-form" id="register-form">
+                            <div class="form-group">
+                                <label for="name"><i class="zmdi zmdi-pin-account"></i></label>
+                                <input type="text" name="name" id="name" placeholder="Your Name"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="nickname"><i class="zmdi zmdi-star-outline"></i></label>
+                                <input type="text" name="nickname" id="nickname" placeholder="Your Nickname"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="birth"><i class="zmdi zmdi-calendar"></i></label>
+                                <input type="date" name="birth" id="birth" placeholder="ex)19000130"/>
+                            </div>                    
+                            <div class="form-group">
+                                <label for="id"><i class="zmdi zmdi-account"></i></label>
+                                <input type="text" name="id" id="id" placeholder="ID"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="password"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="password" id="password" placeholder="Password"/>
+                            </div>
+                            
+                            <div class="form-group">
+                                <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
+                                <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
+                            </div>
+                            <div class="form-group form-button">
+                                <button type="submit" name="signup" id="signup" class="form-submit" value="Register"/>Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="signup-image">
+                        <figure><img src="/images/signup-image.jpg" alt="sing up image"></figure>
+                        <a href="/users/login" class="signup-image-link">I am already member</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-</div>
+</body>
+
+<script src="/js/main.js"></script>
