--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -30,7 +30,10 @@
             </div>
         </fieldset>
     </form>
-
+    
+    <div class="center">
+      <a class="button" herf="<%= `/user/${user.id}/edit` %>">Edit Profile</a>
+    </div>
     <div>
         <a class="btn btn-outline-success" href="/users">Back</a>
     </div>
