--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,16 +46,16 @@
                       <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= currentUser.nickame님%></a>
                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="<%=`/bookmark/${currentUser.getDataValue('id')}`%>">Bookmark</a>
-                              <a class="dropdown-item" href="<%=`/post/${currentUser.getDataValue('id')}`%>">My Post</a>
+                              <a class="dropdown-item" href="<%=`/bookmark/${currentUser.getDataValue('id')}`%>">북마크</a>
+                              <a class="dropdown-item" href="<%=`/post/${currentUser.getDataValue('id')}`%>">내 글</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="<%=`/users/${currentUser.getDataValue('id')}`%>">My Profile</a>
-                              <a class="dropdown-item" href="/users/logout">Log out</a>
+                              <a class="dropdown-item" href="<%=`/users/${currentUser.getDataValue('id')}`%>">내 정보e</a>
+                              <a class="dropdown-item" href="/users/logout">로그아웃</a>
                           </div>
                       </li>
                       <%} else {%> <!-- 로그인 안했을때 -->
-                        <li class="nav-item"><a href="users/login" class="nav-link link-light px-2">Login</a></li>
-                        <li class="nav-item"><a href="users/new" class="nav-link link-light px-2">Sign Up</a></li>
+                        <li class="nav-link"><a href="users/login" class="nav-link link-light px-2">로그인</a></li>
+                        <li class="nav-link"><a href="users/new" class="nav-link link-light px-2">회원가입</a></li>
                         <% } %>
                   </ul>
                 </div>
