--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -54,8 +54,8 @@
                           </div>
                       </li>
                       <%} else {%> <!-- 로그인 안했을때 -->
-                        <li class="nav-link"><a href="users/login" class="nav-link link-light px-2">로그인</a></li>
-                        <li class="nav-link"><a href="users/new" class="nav-link link-light px-2">회원가입</a></li>
+                        <a href="users/login" class="nav-link link-light px-2">로그인</a>
+                        <a href="users/new" class="nav-link link-light px-2">회원가입</a>
                         <% } %>
                   </ul>
                 </div>
