--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,9 +53,9 @@
                               <a class="dropdown-item" href="/users/logout">로그아웃</a>
                           </div>
                       </li>
-                      <%} else {%> <!-- 로그인 안했을때 -->
-                        <a href="users/login" class="nav-link link-light px-2">로그인</a>
-                        <a href="users/new" class="nav-link link-light px-2">회원가입</a>
+                      <%} else {%> <!-- 로그인 안 했을 때 -->
+                        <li class="nav-item"><a href="/users/login" class="nav-link link-light px-2">로그인</a></li>
+                        <li class="nav-item"><a href="/users/new" class="nav-link link-light px-2">회원가입</a></li>
                         <% } %>
                   </ul>
                 </div>
