--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="/posts">커뮤니티</a>
                         </li>
                     </ul>
-                    <ul class="login">
+                    <ul class="login nav">
                     <% if (loggedIn) { %><!-- 로그인 시 나타남 -->
                       <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= currentUser.nickame님%></a>
