--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -12,7 +12,7 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">Sign up</h2>
-                        <form action="/users/create method="POST" class="register-form" id="register-form">
+                        <form action="/users/create" method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-pin-account"></i></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name"/>
@@ -39,7 +39,7 @@
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
                             </div>
                             <div class="form-group form-button">
-                                <button type="submit" name="signup" id="signup" class="form-submit" value="Register"/>Submit</button>
+                                <button type="submit" name="signup" id="signup" class="form-submit btn-primary btn" value="Register">Submit</button>
                             </div>
                         </form>
                     </div>
