--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -39,7 +39,7 @@
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
                             </div>
                             <div class="form-group form-button">
-                                <button type="submit" name="signup" id="signup" class="form-submit btn-primary btn" value="Register">Submit</button>
+                                <button type="submit" name="signup" id="signup" class="btn-primary btn" value="Register">Submit</button>
                             </div>
                         </form>
                     </div>
