--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,7 +44,7 @@
                     <ul class="login nav">
                     <% if (loggedIn) { %><!-- 로그인 시 나타남 -->
                       <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= currentUser.nickame님%></a>
+                          <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= currentUser.nickame%> 님</a>
                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <a class="dropdown-item" href="<%=`/bookmark/${currentUser.getDataValue('id')}`%>">북마크</a>
                               <a class="dropdown-item" href="<%=`/post/${currentUser.getDataValue('id')}`%>">내 글</a>
