--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -71,24 +71,23 @@
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/mountainInfo/<%= m.number %>">View</a></button>
                                         </div>
-                                        <!-- user session 추가 후
-                                        <% // let i = 0 %>
-                                        <% // bookmarks.forEach(b => { %>
-                                            <% // if (b.mountainNum == m.number) { %>
-                                                <% // i = 1 %>
-                                            <% // }}) %>
-                                        <% // if (i == 0) { %> -->
-                                            <form action="/bookmark/<%= m.number %>/create" method="post" onsubmit="switchHeart(this.id, 0)">
+                                        <% let i = 0 %>
+                                        <% bookmarks.forEach(b => { %>
+                                            <% if (b.mountainNum == m.number) { %>
+                                                <% i = 1 %>
+                                            <% }}) %>
+                                        <% if (i == 0) { %> -->
+                                            <form action="/bookmark/<%= m.number %>/<%= user.id %>/create" method="post" onsubmit="switchHeart(this.id, 0)">
                                                 <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                             </form>
-                                        <% // } %> 
-                                        <% // else if (i == 1) { */ %> <!---
-                                            <form action="/bookmark/<%= // m.number %>/delete" method="post" onsubmit="switchHeart(this.id, 1)">
-                                                <input type="submit" id="<%= // m.number %>" class="btn fa-input" value="&#xf004" />
-                                            </form> -->
-                                            <% // const heart = document.getElementById(m.number); %>
-                                            <% // heart.style.color = "red"; %>
-                                        <% // }; %>
+                                        <% } %> 
+                                        <% else if (i == 1) { */ %> 
+                                            <form action="/bookmark/<%= m.number %>/<%= user.id %>/delete" method="post" onsubmit="switchHeart(this.id, 1)">
+                                                <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
+                                            </form>
+                                            <% const heart = document.getElementById(m.number); %>
+                                            <% heart.style.color = "red"; %>
+                                        <% }; %>
                                     </div>
                                 </div>
                             </div>
