--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -74,7 +74,7 @@
                                         <% let i = 0; %>
                                         <% if (bookmarks.length != 0) { %>
                                             <% bookmarks.forEach(b => { %>
-                                                <% if (b.mountainNum == m.number) { %>
+                                                <% if (b.mountain.number == m.number) { %>
                                                     <% i = 1; %>
                                                 <% }})}; %>
                                         <% if (i == 0) { %>
