--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -81,14 +81,13 @@
                                             <form action="/bookmark/<%= m.number %>/<%= user.id %>/create" method="post" onsubmit="switchHeart(this.id, 0)">
                                                 <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                             </form>
-                                        <% } %> 
-                                        <% else if (i == 1) { %> 
+                                        <% } else { %> 
                                             <form action="/bookmark/<%= m.number %>/<%= user.id %>/delete" method="post" onsubmit="switchHeart(this.id, 1)">
-                                                <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
+                                                <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="color:red"/>
                                             </form>
-                                            <% const heart = document.getElementById(m.number); %>
-                                            <% heart.style.color = "red"; %>
-                                        <% }; %>
+                                            <% // const heart = document.getElementById(m.number); %>
+                                            <% // heart.style.color = "red"; %>
+                                        <% } %>
                                     </div>
                                 </div>
                             </div>
