--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -78,9 +78,15 @@
                                                     <% i = 1; %>
                                                 <% }})}; %>
                                         <% if (i == 0) { %>
-                                            <form action="/bookmark/<%= m.number %>/<%= currentUser.getDataValue('id') %>/create" method="post" onsubmit="switchHeart(this.id, 0)">
-                                                <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
-                                            </form>
+                                            <% if (loggedIn) { %>
+                                                <form action="/bookmark/<%= m.number %>/<%= currentUser.id %>/create" method="post" onsubmit="switchHeart(this.id, 0)">
+                                                    <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
+                                                </form>
+                                            <% } else { %>
+                                                <form action="/mountain" method="get" onsubmit="switchHeart(this.id, 0)">
+                                                    <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
+                                                </form>
+                                            <% } %>
                                         <% } else { %> 
                                             <form action="/bookmark/<%= m.number %>/<%= currentUser.id %>/delete" method="post" onsubmit="switchHeart(this.id, 1)">
                                                 <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="color:red"/>
