--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,10 +42,11 @@
                         </li>
                     </ul>
                     <% if (loggedIn) { %><!-- 로그인 시 나타남 -->
+                    <ul class="login nav">
                         <li class="nav-item">
                             <%= currentUser.name %> 님
                         </li>
-                    <ul class="login nav">
+                        <!-- dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 마이 페이지
