--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -44,7 +44,7 @@
                     <% if (loggedIn) { %><!-- 로그인 시 나타남 -->
                     <ul class="login nav">
                         <!-- dropdown -->
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown" style="size:50px">
                             <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <%= currentUser.name %> 님
                             </a>
