--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,4 +1,4 @@
-</br></br>
+<div class="container-fluid">
   <div class="card">
     <h5 class="card-header p-2"><%= post.title %></h5>
     <div class="row">
@@ -7,16 +7,39 @@
       </div>
     </div>
   </div>
-</br>
+
   <div class="mt-3">
     <a class="btn btn-outline-success" href="/posts">Back</a>
   </div>
- <div class="data-form">
-    <form class="form-post" action="/comments/<%=post.id%>" method="post">
+</div>
+<!--  
+댓글 view 추가
+
+  <div class="container-fluid">
+          <% comments.forEach(comment=> { %> 
+            
+              <div class="row">
+               <div class="col-3 col-md-2 col-lg-1 pl-4"><%= comment.commentNum %></div> 
+                <div class="col-9 col-md-10 col-lg-11">
+                  <div class="comment-show">
+                    <div class="comment-text mb-3"><%= comment.commentDetail %></div>
+                    <small class="d-block">
+                      (Created: <span data-date-time="<%= comment.createdAt %>"></span>) 
+                    </small>
+                  </div>
+                </div>
+              </div>
+            
+          <% }) %>
+        </div>
+
+
+  <div class="data-form">
+    <form class="form-post" action="<%=`/comments/${post.id}/create`%>" method="post">
 
       <div class="form-group">
         <label for="commentDetail">Comment</label>
-        <textarea id="commetDetail" name="commetDetail" class="form-control" placeholder="commentDetail"></textarea>
+        <textarea id="commetDetail" name="commetDetail" class="form-control" placeholder="commetDetail"></textarea>
       </div>
 
       <div>
@@ -24,4 +47,5 @@
       </div>
 
     </form>
-
+  </div>
+  -->
